# KlipperPlace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/examples/: .gitkeep
config/schemas/: .gitkeep
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  HARDWARE_TESTING.md  PROJECT_SUMMARY.md  REVIEW.md  SETUP.md  TESTING.md  index.md
external_repos/openpnp-main/: OpenPnP.install4j
external_repos/openpnp-main/src/main/resources/org/openpnp/machine/reference/feeder/: AdvancedLoosePartFeeder-DefaultPipeline.xml  AdvancedLoosePartFeeder-DefaultTrainingPipeline.xml  HeapFeeder-Part-BLACK-Pipeline.xml  HeapFeeder-Part-GREEN-Pipeline.xml  HeapFeeder-Part-WHITE-Pipeline.xml  HeapFeeder-Training-BLACK-Pipeline.xml  HeapFeeder-Training-GREEN-Pipeline.xml  HeapFeeder-Training-WHITE-Pipeline.xml
external_repos/openpnp-main/src/main/resources/org/openpnp/machine/reference/vision/: ReferenceFiducialLocator-DefaultPipeline.xml
plans/: architecture-design.md
src/api/: .gitkeep  __init__.py  auth.py  schema.md  server.py  test_auth.py
src/api/routes/: __init__.py  actuator_routes.py  auth_routes.py  batch_routes.py  fan_routes.py  feeder_routes.py  gpio_routes.py  motion_routes.py  pnp_routes.py  pwm_routes.py  queue_routes.py  sensor_routes.py  status_routes.py  system_routes.py  test_actuator_routes.py  test_batch_routes.py  test_fan_routes.py  test_feeder_routes.py  test_gpio_routes.py  test_motion_routes.py  test_other_routes.py  test_pnp_routes.py  test_pwm_routes.py  test_queue_routes.py  test_sensor_routes.py  test_status_routes.py  test_system_routes.py  test_vacuum_routes.py  test_version_routes.py  vacuum_routes.py  version_routes.py
src/gcode_driver/: .gitkeep  handlers.py  parser.py  test_handlers.py  test_parser.py  test_translator.py  translator.py
src/klipper_modules/: .gitkeep
src/middleware/: .gitkeep  README.md  __init__.py  cache.py  safety.py  test_cache.py  test_safety.py  test_translator.py  translator.py
src/moonraker_extensions/: .gitkeep  fan_control.py  gpio_monitor.py  pwm_control.py  sensor_query.py  test_fan_control.py  test_gpio_monitor.py  test_pwm_control.py  test_sensor_query.py  test_websocket_notifier.py  websocket_notifier.py
tests/: .gitkeep
tests/integration/: conftest.py  test_api_to_middleware.py  test_authentication_flow.py  test_end_to_end_commands.py  test_error_propagation.py  test_middleware_to_gcode_driver.py  test_websocket_flow.py
